--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,14 @@
 export(cifti_data)
 export(cifti_read_char)
 export(cifti_xml)
+export(download_cifti_data)
 export(get_brain_model)
+export(get_cifti_type)
 export(get_named_map)
 export(get_parcel)
 export(get_surface)
 export(get_volume)
+export(have_cifti_test_data)
 export(is_cifti_numeric)
 export(matrix_ind_map_nodes)
 export(nifti_2_hdr)
@@ -16,7 +19,11 @@ export(parse_named_map)
 export(parse_parcel)
 export(parse_surface)
 export(parse_volume)
+export(readCIFTI)
+export(read_cifti)
 importFrom(oro.nifti,nifti)
+importFrom(utils,download.file)
+importFrom(utils,unzip)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_attrs)
 importFrom(xml2,xml_find_all)
