--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: cifti
 Type: Package
 Title: Toolbox for Connectivity Informatics Technology Initiative ('CIFTI') 
     Files
-Version: 0.4.3
+Version: 0.4.4
 Author: John Muschelli
 Maintainer: John Muschelli <muschellij2@gmail.com>
 Description: Functions for the input/output and visualization of
@@ -18,6 +18,9 @@ Imports:
     utils
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.0.1.9000
 Remotes: muschellij2/gifti
-Suggests: covr
+Suggests: covr,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
