Fixing the attributes problem.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(parse_volume)
 export(readCIFTI)
 export(read_cifti)
 export(readcii)
+importFrom(R.utils,gunzip)
 importFrom(gifti,gifti_map_value)
 importFrom(gifti,is.gifti)
 importFrom(gifti,readgii)
