--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Imports:
     rgl,
     oro.nifti,
     gifti,
-    utils
+    utils,
+    R.utils
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1.9000
