--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ importFrom(gifti,readgii)
 importFrom(oro.nifti,nifti)
 importFrom(utils,download.file)
 importFrom(utils,unzip)
+importFrom(xml2,as_list)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_attrs)
 importFrom(xml2,xml_find_all)
