--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ importFrom(gifti,gifti_map_value)
 importFrom(gifti,is.gifti)
 importFrom(gifti,readgii)
 importFrom(oro.nifti,nifti)
+importFrom(utils,citation)
 importFrom(utils,download.file)
 importFrom(utils,unzip)
 importFrom(xml2,as_list)
