Make vignettes as Rmd and downlaods test data to ./inst

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@
 .RData
 .Ruserdata
 inst/doc
-vignettes/*.Rmd
+inst/cifti-2_test_data
+inst/msc/sub-MSC01_ses-func01_task-rest_bold_32k_fsLR.dtseries.nii
